# tidal2tidal

./: README.md  pyproject.toml
src/: tidal2tidal.py
tidal2tidal/: __init__.py  __main__.py  tidal2tidal.py
